--- a/Public/index.html
+++ b/Public/index.html
@@ -22,7 +22,11 @@
         </ul>
       </div>
       <section>
-        Comparisons
+        <form action="/action_page.php">
+          <p><label for="Search">Item name or description:</label></p>
+          <p><input type="text" id="search" name="search" value="Search"></p>
+          <p><input type="submit" value="Submit"></p>
+        </form>
       </section>
     </div>
     <script src="index.js"></script>
