--- a/Public/index.html
+++ b/Public/index.html
@@ -10,19 +10,17 @@
 
   <body>
     <div class="bg">
-      <header>
-        <h1>Shopping App</h1>
-      </header>
       <div class = "navbar">
         <ul>
-          <li><button aria-label="Offers">Offers</button></li>
-          <li><button aria-label="Login">Login</button></li>
-          <li><button aria-label="Register">Register</button></li>
-          <li><button aria-label="Basket">Basket</button></li>
+          <li><div class = "navLeft">Shopping App</div></li>
+          <li><div class = "navRight">Offers</div></li>
+          <li><div class = "navRight">Login</div></li>
+          <li><div class = "navRight">Register</div></li>
+          <li><div class = "navRight">Basket</div></li>
         </ul>
       </div>
       <section>
-        <form action="/action_page.php">
+        <form action="/">
           <p><label for="Search">Item name or description:</label></p>
           <p><input type="text" id="search" name="search" value="Search"></p>
           <p><input type="submit" value="Submit"></p>
