--- a/Public/index.html
+++ b/Public/index.html
@@ -19,13 +19,16 @@
           <li><div class = "navRight">Basket</div></li>
         </ul>
       </div>
-      <section>
+      <div class = "searchForm">
         <form action="/">
           <p><label for="Search">Item name or description:</label></p>
-          <p><input type="text" id="search" name="search" value="Search"></p>
+          <p><input type="text" id="search" name="search" placeholder="Search"></p>
           <p><input type="submit" value="Submit"></p>
         </form>
-      </section>
+      </div>
+      <div class = "results">
+        <p>Display results</p>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
