--- a/Public/index.html
+++ b/Public/index.html
@@ -20,14 +20,14 @@
         </ul>
       </div>
       <div class = "searchForm">
-        <form action="/">
-          <p><label for="Search">Item name or description:</label></p>
-          <p><input type="text" id="search" name="search" placeholder="Search"></p>
-          <p><input type="submit" value="Submit"></p>
-        </form>
+        <p>Enter product name or description:</p>
+
+        <input type="text" id="searchField" name="search" placeholder="Search">
+        <input type="button" id="submitButton" value="Submit">
+
       </div>
       <div class = "results">
-        <p>Display results</p>
+        <p id="results">Display results</p>
       </div>
     </div>
     <script src="index.js"></script>
