--- a/Public/index.html
+++ b/Public/index.html
@@ -10,10 +10,10 @@
 
   <body>
     <div class="bg">
-      <div id="Modal" class="modal">
+      <div id="loginModal" class="modal">
         <div class="modal-content">
           <div class="modal-header">
-            <span id="close" class="close">&times;</span>
+            <span id="loginClose" class="close">&times;</span>
             <span><h2>Login:</h2><span>
           </div>
           <div class="modal-body">
@@ -23,7 +23,28 @@
             <p><label for="psw"><b>Password</b></label></p>
             <p><input type="password" placeholder="Enter Password" name="psw" required></p>
 
-            <p><button type="submit">Login</button></p>
+            <p><button type="submit" id="loginButton">Login</button></p>
+          </div>
+        </div>
+      </div>
+
+      <div id="registerModal" class="modal">
+        <div class="modal-content">
+          <div class="modal-header">
+            <span id="registerClose" class="close">&times;</span>
+            <span><h2>Login:</h2><span>
+          </div>
+          <div class="modal-body">
+            <p><label for="uname"><b>Username</b></label></p>
+            <p><input type="text" placeholder="Enter Username" name="uname" required></p>
+
+            <p><label for="email"><b>Email</b></label></p>
+            <p><input type="text" placeholder="Enter email" name="email" required></p>
+
+            <p><label for="psw"><b>Password</b></label></p>
+            <p><input type="password" placeholder="Enter Password" name="psw" required></p>
+
+            <p><button type="submit" id="registerButton">Register</button></p>
           </div>
         </div>
       </div>
