--- a/Public/index.html
+++ b/Public/index.html
@@ -11,46 +11,49 @@
 
   <body>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <div id="loginModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span id="loginClose" class="close">&times;</span>
+          <span><h2>Login:</h2><span>
+        </div>
+        <div class="modal-body">
+          <p><label for="uname"><b>Username</b></label></p>
+          <p><input type="text" id="loginText" placeholder="Enter Username" name="uname" required></p>
 
+          <p><label for="psw"><b>Password</b></label></p>
+          <p><input type="password" id="passwordText" placeholder="Enter Password" name="psw" required></p>
+
+          <p><button type="submit" id="loginButton">Login</button></p>
+
+          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        </div>
+      </div>
+    </div>
+
+    <div id="registerModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span id="registerClose" class="close">&times;</span>
+          <span><h2>Login:</h2><span>
+        </div>
+        <div class="modal-body">
+          <p><label for="uname"><b>Username</b></label></p>
+          <p><input type="text" placeholder="Enter Username" name="uname" required></p>
+
+          <p><label for="email"><b>Email</b></label></p>
+          <p><input type="text" placeholder="Enter email" name="email" required></p>
+
+          <p><label for="psw"><b>Password</b></label></p>
+          <p><input type="password" placeholder="Enter Password" name="psw" required></p>
+
+          <p><button type="submit" id="registerButton">Register</button></p>
+
+          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        </div>
+      </div>
+    </div>
     <div class="bg">
-      <div id="loginModal" class="modal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <span id="loginClose" class="close">&times;</span>
-            <span><h2>Login:</h2><span>
-          </div>
-          <div class="modal-body">
-            <p><label for="uname"><b>Username</b></label></p>
-            <p><input type="text" id="loginText" placeholder="Enter Username" name="uname" required></p>
-
-            <p><label for="psw"><b>Password</b></label></p>
-            <p><input type="password" id="passwordText" placeholder="Enter Password" name="psw" required></p>
-
-            <p><button type="submit" id="loginButton">Login</button></p>
-          </div>
-        </div>
-      </div>
-
-      <div id="registerModal" class="modal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <span id="registerClose" class="close">&times;</span>
-            <span><h2>Login:</h2><span>
-          </div>
-          <div class="modal-body">
-            <p><label for="uname"><b>Username</b></label></p>
-            <p><input type="text" placeholder="Enter Username" name="uname" required></p>
-
-            <p><label for="email"><b>Email</b></label></p>
-            <p><input type="text" placeholder="Enter email" name="email" required></p>
-
-            <p><label for="psw"><b>Password</b></label></p>
-            <p><input type="password" placeholder="Enter Password" name="psw" required></p>
-
-            <p><button type="submit" id="registerButton">Register</button></p>
-          </div>
-        </div>
-      </div>
       <div class = "navbar">
         <ul>
           <li><div class = "navLeft">Shopping App</div></li>
@@ -58,7 +61,6 @@
           <li><div class = "navRight" id="login">Login</div></li>
           <li><div class = "navRight" id="register">Register</div></li>
           <li><div class = "navRight" id="basket">Basket</div></li>
-          <li><div class = "navRight"><div class="g-signin2" data-onsuccess="onSignIn"></div></div></li>
         </ul>
       </div>
       <div class = "searchForm">
