Added home button

--- a/Public/index.html
+++ b/Public/index.html
@@ -59,6 +59,7 @@
           <li><div class = "navRight" id="login">Login</div></li>
           <li><div class = "navRight" id="register">Register</div></li>
           <li><div class = "navRight" id="basket">Basket</div></li>
+          <li><div class = "navRight" id="home">Home</div></li>
         </ul>
       </div>
       <div class = "searchForm">
