--- a/Public/basket.html
+++ b/Public/basket.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en-US">
+<link href="basketStyle.css" rel="stylesheet" title="Default">
 <html>
 <body bgcolor="#1E90FF">
 <html/>
