--- a/Public/basket.html
+++ b/Public/basket.html
@@ -1,17 +1,71 @@
-<!doctype html>
-<html lang="en-US">
-<link href="basketStyle.css" rel="stylesheet" title="Default">
-<html>
-<body bgcolor="#1E90FF">
-<html/>
-<head>
-<h1>Basket</h1>
+<!DOCTYPE html>
+<HTML LANG="EN">
 
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="3211205636-6i4b7skcon6vldm82g3v7gkrhvajii51.apps.googleusercontent.com">
+    <link href="basketStyle.css" rel="stylesheet" title="Default">
+    <title>Basket page</title>
+  </head>
 
-</head>
+  <body>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <div id="loginModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span id="loginClose" class="close">&times;</span>
+          <span><h2>Login:</h2><span>
+        </div>
+        <div class="modal-body">
+          <p><label for="uname"><b>Username</b></label></p>
+          <p><input type="text" id="loginText" placeholder="Enter Username" name="uname" required></p>
 
+          <p><label for="psw"><b>Password</b></label></p>
+          <p><input type="password" id="passwordText" placeholder="Enter Password" name="psw" required></p>
 
+          <p><button type="submit" id="loginButton">Login</button></p>
 
+          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        </div>
+      </div>
+    </div>
+
+    <div id="registerModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span id="registerClose" class="close">&times;</span>
+          <span><h2>Login:</h2><span>
+        </div>
+        <div class="modal-body">
+          <p><label for="uname"><b>Username</b></label></p>
+          <p><input type="text" placeholder="Enter Username" name="uname" required></p>
+
+          <p><label for="email"><b>Email</b></label></p>
+          <p><input type="text" placeholder="Enter email" name="email" required></p>
+
+          <p><label for="psw"><b>Password</b></label></p>
+          <p><input type="password" placeholder="Enter Password" name="psw" required></p>
+
+          <p><button type="submit" id="registerButton">Register</button></p>
+        </div>
+      </div>
+    </div>
+    <div class="bg">
+      <div class = "navbar">
+        <ul>
+          <li><div class = "navLeft">Basket page</div></li>
+          <li><div class = "navRight" id="offers">Offers</div></li>
+          <li><div class = "navRight" id="login">Login</div></li>
+          <li><div class = "navRight" id="register">Register</div></li>
+          <li><div class = "navRight" id="basket">Basket</div></li>
+          <li><div class = "navRight" id="home">Home</div></li>
+        </ul>
+      </div>
+    <script src="index.js"></script>
+  </body>
+
+</html>
 
 <button type="button">Apply changes</button>
 
