--- a/Public/basket.html
+++ b/Public/basket.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="3211205636-6i4b7skcon6vldm82g3v7gkrhvajii51.apps.googleusercontent.com">
-    <link href="basketStyle.css" rel="stylesheet" title="Default">
+    <link href="style.css" rel="stylesheet" title="Default">
     <title>Basket page</title>
   </head>
 
