--- a/Public/index.html
+++ b/Public/index.html
@@ -72,6 +72,33 @@
       <div class = "results">
         <p id="results">Display results</p>
       </div>
+      
+        <table class="productTable">
+  <tr>
+    <th>Product</th>
+    <th>Vendor1</th>
+    <th>Vendor2</th>
+  </tr>
+  <tr>
+
+  </tr>
+  <tr>
+
+  </tr>
+  <tr>
+
+  </tr>
+  <tr>
+
+  </tr>
+  <tr>
+
+  </tr>
+  <tr>
+
+  </tr>
+</table>
+      
     </div>
     <script src="index.js"></script>
   </body>
