--- a/Public/basket.html
+++ b/Public/basket.html
@@ -69,6 +69,6 @@
 
 <button type="button">Apply changes</button>
 
-<button type="button">Empty cart</button>
+<button type="button" onclick= "myDeleteFunction()">Empty cart</button>
 
 <button type="button">Checkout</button>
