--- a/Public/index.html
+++ b/Public/index.html
@@ -55,11 +55,11 @@
       <div class = "navbar">
         <ul>
           <li><div class = "navLeft">Shopping App</div></li>
-          <li><div class = "navRight" id="offers">Offers</div></li>
+          <li><div class = "navRight" onclick="location.href = 'Offers page.html';">Offers</div></li>
           <li><div class = "navRight" id="login">Login</div></li>
           <li><div class = "navRight" id="register">Register</div></li>
-          <li><div class = "navRight" id="basket">Basket</div></li>
-          <li><div class = "navRight" id="home">Home</div></li>
+          <li><div class = "navRight" onclick="location.href = 'basket.html';">Basket</div></li>
+          <li><div class = "navRight"onclick="location.href = 'Index.html';">Home</div></li>
         </ul>
       </div>
       <div class = "searchForm">
@@ -72,8 +72,40 @@
       <div class = "results">
         <p id="results">Display results</p>
       </div>
+
+      <table class="productTable">
+      <tr>
+        <th id="product">Product</th>
+        <th id="vendor1">Vendor1</th>
+        <th id="vendor2">Vendor2</th>
+      </tr>
+      <tr>
+        <td>Bread</td>
+        <td>85p</td>
+        <td>75p</td>
+      </tr>
+      <tr>
+
+      </tr>
+      <tr>
+
+      </tr>
+      <tr>
+
+      </tr>
+      <tr>
+
+      </tr>
+      <tr>
+
+      </tr>
+    </table>
+
     </div>
     <script src="index.js"></script>
+
+
+
   </body>
 
 </html>
