Pages linked and fixes

--- a/Public/Offerspage.html
+++ b/Public/Offerspage.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="3211205636-6i4b7skcon6vldm82g3v7gkrhvajii51.apps.googleusercontent.com">
-    <link href="OfferStyle.css" rel="stylesheet" title="Default">
+    <link href="style.css" rel="stylesheet" title="Default">
     <title>Offers page</title>
   </head>
 
@@ -54,12 +54,12 @@
     <div class="bg">
       <div class = "navbar">
         <ul>
-          <li><div class = "navLeft">Offers Page</div></li>
-          <li><div class = "navRight" id="offers">Offers</div></li>
-          <li><div class = "navRight" id="login">Login</div></li>
+          <li><div class = "navLeft" onclick="location.href = 'index.html';">Shopping App</div></li>
+          <li><div class = "navRight" id="offers" onclick="location.href = 'Offerspage.html';">Offers</div></li>
+          <li><div class = "navRight" id="login" >Login</div></li>
           <li><div class = "navRight" id="register">Register</div></li>
-          <li><div class = "navRight" id="basket">Basket</div></li>
-          <li><div class = "navRight" id="home">Home</div></li>
+          <li><div class = "navRight" id="basket" onclick="location.href = 'basket.html';">Basket</div></li>
+          <li><div class = "navRight" id="home" onclick="location.href = 'index.html';">Home</div></li>
         </ul>
       </div>
     <script src="index.js"></script>
