--- a/Public/basket.html
+++ b/Public/basket.html
@@ -54,12 +54,12 @@
     <div class="bg">
       <div class = "navbar">
         <ul>
-          <li><div class = "navLeft">Basket page</div></li>
-          <li><div class = "navRight" onclick="loction.href = 'Offerspage.html';">Offers</div></li>
-          <li><div class = "navRight" id="login">Login</div></li>
+          <li><div class = "navLeft" onclick="location.href = 'index.html';">Shopping App</div></li>
+          <li><div class = "navRight" id="offers" onclick="location.href = 'Offerspage.html';">Offers</div></li>
+          <li><div class = "navRight" id="login" >Login</div></li>
           <li><div class = "navRight" id="register">Register</div></li>
-          <li><div class = "navRight" onclick="loction.href = 'basket.html';">Basket</div></li>
-          <li><div class = "navRight" onclick="loction.href = 'index.html';">Home</div></li>
+          <li><div class = "navRight" id="basket" onclick="location.href = 'basket.html';">Basket</div></li>
+          <li><div class = "navRight" id="home" onclick="location.href = 'index.html';">Home</div></li>
         </ul>
       </div>
     <script src="index.js"></script>
