--- a/Public/index.html
+++ b/Public/index.html
@@ -1,77 +1,61 @@
-<!DOCTYPE html>
-<HTML LANG="EN">
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Smart Shopping</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.dropotron.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
+		<script src="index.js"></script>
+		
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+		</noscript>
+	</head>
+	
+	<body>
+		<!-- Wrapper -->
+			<div class="wrapper style1">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="3211205636-6i4b7skcon6vldm82g3v7gkrhvajii51.apps.googleusercontent.com">
-    <link href="style.css" rel="stylesheet" title="Default">
-    <title>Shopping App</title>
-  </head>
+				<!-- Header -->
+					<div id="header" class="skel-panels-fixed">
+						<div id="logo">
+							<h1><a href="index.html">Smart Shopping App</a></h1>
+							<span class="tag">by UoP SE Students</span>
+						</div>
+						<nav id="nav">
+							<ul>
+								<li class="active"><a href="index.html">Home</a></li>
+								<li><a href="offerspage.html">Offers</a></li>
+								<li><a href="login.html">Login</a></li>
+								<li><a href="register.html">Register</a></li>
+								<li><a href="basket.html">Basket</a></li>
+							</ul>
+							
+					</div>
+				</nav>
+			</div>
 
-  <body>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <div id="loginModal" class="modal">
-      <div class="modal-content">
-        <div class="modal-header">
-          <span id="loginClose" class="close">&times;</span>
-          <span><h2>Login:</h2><span>
-        </div>
-        <div class="modal-body">
-          <p><label for="uname"><b>Username</b></label></p>
-          <p><input type="text" id="loginText" placeholder="Enter Username" name="uname" required></p>
-
-          <p><label for="psw"><b>Password</b></label></p>
-          <p><input type="password" id="passwordText" placeholder="Enter Password" name="psw" required></p>
-
-          <p><button type="submit" id="loginButton">Login</button></p>
-
-          <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        </div>
-      </div>
-    </div>
-
-    <div id="registerModal" class="modal">
-      <div class="modal-content">
-        <div class="modal-header">
-          <span id="registerClose" class="close">&times;</span>
-          <span><h2>Login:</h2><span>
-        </div>
-        <div class="modal-body">
-          <p><label for="uname"><b>Username</b></label></p>
-          <p><input type="text" placeholder="Enter Username" name="uname" required></p>
-
-          <p><label for="email"><b>Email</b></label></p>
-          <p><input type="text" placeholder="Enter email" name="email" required></p>
-
-          <p><label for="psw"><b>Password</b></label></p>
-          <p><input type="password" placeholder="Enter Password" name="psw" required></p>
-
-          <p><button type="submit" id="registerButton">Register</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="bg">
-      <div class = "navbar">
-        <ul>
-          <li><div class = "navLeft" onclick="location.href = 'index.html';">Shopping App</div></li>
-          <li><div class = "navRight" id="offers" onclick="location.href = 'Offerspage.html';">Offers</div></li>
-          <li><div class = "navRight" id="login" >Login</div></li>
-          <li><div class = "navRight" id="register">Register</div></li>
-          <li><div class = "navRight" id="basket" onclick="location.href = 'basket.html';">Basket</div></li>
-          <li><div class = "navRight" id="home" onclick="location.href = 'index.html';">Home</div></li>
-        </ul>
-      </div>
-      <div class = "searchForm">
-        <p>Enter product name or description:</p>
-        <input type="text" id="searchField" name="search" placeholder="Search">
-        <input type="button" id="submitButton" value="Submit">
-      </div>
-      <div id="results" class = "results" >
-
-      </div>
-    </div>
-    <script src="index.js"></script>
-  </body>
-
+			<div id="banner" class="container">
+				<section>
+					<div class = "searchForm">
+					<p>Enter product name</p>
+					<input type="text" id="searchField" name="search" placeholder="Search">
+					<input type="button" id="submitButton" value="Browse">
+					<p> <p>
+					</div>
+					<div id="results" class = "results" >						
+			</div>
+		</div>
+					<script src="index.js"></script>
+		</nav>
+		</section>			 
+		</div>
+		</div>
+	</body>
 </html>
