--- a/Public/index.html
+++ b/Public/index.html
@@ -3,23 +3,64 @@
 	<head>
 		<title>Smart Shopping</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	
+
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.dropotron.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
 		<script src="index.js"></script>
-		
+
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
 		</noscript>
 	</head>
-	
+
 	<body>
 		<!-- Wrapper -->
+	 <script src="https://apis.google.com/js/platform.js" async defer></script>
+	 <div id="loginModal" class="modal">
+		 <div class="modal-content">
+			 <div class="modal-header">
+				 <span id="loginClose" class="close">&times;</span>
+				 <span><h2>Login:</h2><span>
+			 </div>
+			 <div class="modal-body">
+				 <p><label for="uname"><b>Username</b></label></p>
+				 <p><input type="text" id="loginText" placeholder="Enter Username" name="uname" required></p>
+
+				 <p><label for="psw"><b>Password</b></label></p>
+				 <p><input type="password" id="passwordText" placeholder="Enter Password" name="psw" required></p>
+
+				 <p><button type="submit" id="loginButton">Login</button></p>
+
+				 <div class="g-signin2" data-onsuccess="onSignIn"></div>
+			 </div>
+		 </div>
+	 </div>
+
+	 <div id="registerModal" class="modal">
+		 <div class="modal-content">
+			 <div class="modal-header">
+				 <span id="registerClose" class="close">&times;</span>
+				 <span><h2>Login:</h2><span>
+			 </div>
+			 <div class="modal-body">
+				 <p><label for="uname"><b>Username</b></label></p>
+				 <p><input type="text" placeholder="Enter Username" name="uname" required></p>
+
+				 <p><label for="email"><b>Email</b></label></p>
+				 <p><input type="text" placeholder="Enter email" name="email" required></p>
+
+				 <p><label for="psw"><b>Password</b></label></p>
+				 <p><input type="password" placeholder="Enter Password" name="psw" required></p>
+
+				 <p><button type="submit" id="registerButton">Register</button></p>
+			 </div>
+		 </div>
+	 </div>
 			<div class="wrapper style1">
 
 				<!-- Header -->
@@ -32,11 +73,11 @@
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
 								<li><a href="offerspage.html">Offers</a></li>
-								<li><a href="login.html">Login</a></li>
-								<li><a href="register.html">Register</a></li>
+								<li><a id="login">Login</a></li>
+								<li><a id="register">Register</a></li>
 								<li><a href="basket.html">Basket</a></li>
 							</ul>
-							
+
 					</div>
 				</nav>
 			</div>
@@ -49,12 +90,12 @@
 					<input type="button" id="submitButton" value="Browse">
 					<p> <p>
 					</div>
-					<div id="results" class = "results" >						
+					<div id="results" class = "results" >
 			</div>
 		</div>
 					<script src="index.js"></script>
 		</nav>
-		</section>			 
+		</section>
 		</div>
 		</div>
 	</body>
