--- a/Public/index.html
+++ b/Public/index.html
@@ -70,7 +70,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="active"><a href="index.html">Home</a></li>
-								<li><a href="offerspage.html">Offers</a></li>
+								<li><a href="Offerspage.html">Offers</a></li>
 								<li><a id="login">Login</a></li>
 								<li><a id="register">Register</a></li>
 								<li><a href="basket.html">Basket</a></li>
