--- a/Public/Offerspage.html
+++ b/Public/Offerspage.html
@@ -3,26 +3,19 @@
   <head>
     <title>Offers page</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="google-signin-client_id" content="3211205636-6i4b7skcon6vldm82g3v7gkrhvajii51.apps.googleusercontent.com">
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<script src="index.js"></script>
-
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-		</noscript>
+    <link rel="shortcut icon" href="#" />
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-wide.css" />
 	</head>
 
-
-  </head>
-
   <body>
-		<!-- Wrapper -->
+   <script src="js/jquery.min.js"></script>
+ 	 <script src="js/skel.min.js"></script>
+ 	 <script src="js/init.js"></script>
+ 	 <script src="js/index.js" async defer></script>
 	 <script src="https://apis.google.com/js/platform.js" async defer></script>
 	 <div id="loginModal" class="modal">
 		 <div class="modal-content">
@@ -80,7 +73,7 @@
 							</ul>
             </div>
           </nav>
-          </div>
+        </div>
 
       <div class = "container">
         <table>
@@ -98,7 +91,6 @@
         </tr>
        </table>
     </div>
-    <script src="index.js"></script>
   </body>
 
 </html>
