--- a/Public/index.html
+++ b/Public/index.html
@@ -4,22 +4,19 @@
 		<title>Smart Shopping</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="google-signin-client_id" content="3211205636-6i4b7skcon6vldm82g3v7gkrhvajii51.apps.googleusercontent.com">
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.dropotron.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<script src="index.js"></script>
-
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-		</noscript>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="shortcut icon" href="#" />
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-wide.css" />
 	</head>
 
 	<body>
-		<!-- Wrapper -->
+	<!-- Wrapper -->
+	 <script src="js/jquery.min.js"></script>
+	 <script src="js/skel.min.js"></script>
+	 <script src="js/init.js"></script>
+	 <script src="js/index.js" async defer></script>
 	 <script src="https://apis.google.com/js/platform.js" async defer></script>
 	 <div id="loginModal" class="modal">
 		 <div class="modal-content">
@@ -91,7 +88,6 @@
 					<div id="results" class = "results" >
 			</div>
 		</div>
-					<script src="index.js"></script>
 		</nav>
 		</section>
 		</div>
