--- a/Public/basket.html
+++ b/Public/basket.html
@@ -15,7 +15,7 @@
     <script src="js/jquery.min.js"></script>
  	  <script src="js/skel.min.js"></script>
  	  <script src="js/init.js"></script>
- 	  <script src="js/index.js" async defer></script>
+ 	  <script src="js/offers.js" async defer></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <div id="loginModal" class="modal">
       <div class="modal-content">
@@ -73,12 +73,12 @@
               <li><a id="register">Register</a></li>
               <li><a href="basket.html">Basket</a></li>
             </ul>
-
-          </div>
           </nav>
-          </div>
-          <table id="basketTable">
-          </table>
+        </div>
+
+      </div>
+        <table id="basketTable">
+        </table>
 
 
         <button type="button" >Apply changes</button>
