--- a/Public/basket.html
+++ b/Public/basket.html
@@ -81,12 +81,40 @@
         </table>
 
 
-        <button type="button" >Apply changes</button>
+      </div>
 
-        <button type="button" onclick= "myDeleteFunction()">Empty cart</button>
 
-        <button type="button">Checkout</button>
-  </body>
+<h1>Basket</h1>
+ 
+
+<div class="home">
+
+  
+    <label class="image">Image</label>
+    <label class="details">Product</label>
+    <label class="price">Price</label>
+    <label class="quantity">Quantity</label>
+    <label class="removal">Remove</label>
+    <label class="total">Total</label>
+
+    <div class="totals-item">
+
+      <button class="checkout">Checkout</button>
+      <button class="empty">Empty</button>
+      
+</div>
+  
+</div>
+
+
+ 
+  
+
+</div>
+
+
+
+
 
 
 
