--- a/Public/basket.html
+++ b/Public/basket.html
@@ -75,49 +75,24 @@
             </ul>
           </nav>
         </div>
+    </div>
+    <table id="basketTable">
+    </table>
+    <h1>Basket</h1>
 
-      </div>
-        <table id="basketTable">
-        </table>
+    <div class="home">
 
+        <label class="image">Image</label>
+        <label class="details">Product</label>
+        <label class="price">Price</label>
+        <label class="quantity">Quantity</label>
+        <label class="removal">Remove</label>
+        <label class="total">Total</label>
 
-      </div>
-
-
-<h1>Basket</h1>
- 
-
-<div class="home">
-
-  
-    <label class="image">Image</label>
-    <label class="details">Product</label>
-    <label class="price">Price</label>
-    <label class="quantity">Quantity</label>
-    <label class="removal">Remove</label>
-    <label class="total">Total</label>
-
-    <div class="totals-item">
-
-      <button class="checkout">Checkout</button>
-      <button class="empty">Empty</button>
-      
-</div>
-  
-</div>
-
-
- 
-  
-
-</div>
-
-
-
-
-
-
-
-
-
+        <div class="totals-item">
+          <button class="checkout">Checkout</button>
+          <button class="empty">Empty</button>
+        </div>
+    </div>
+  </body>
 </html>
