--- a/Public/Offerspage.html
+++ b/Public/Offerspage.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Offers page</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<title>Smart Shopping</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="google-signin-client_id" content="3211205636-6i4b7skcon6vldm82g3v7gkrhvajii51.apps.googleusercontent.com">
-    <link rel="shortcut icon" href="#" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="shortcut icon" href="#" />
 		<link rel="stylesheet" href="css/skel.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/style-wide.css" />
 	</head>
 
-  <body>
-   <script src="js/jquery.min.js"></script>
- 	 <script src="js/skel.min.js"></script>
- 	 <script src="js/init.js"></script>
- 	 <script src="js/index.js" async defer></script>
+	<body>
+	<!-- Wrapper -->
+	 <script src="js/jquery.min.js"></script>
+	 <script src="js/skel.min.js"></script>
+	 <script src="js/init.js"></script>
+	 <script src="js/offers.js" async defer></script>
 	 <script src="https://apis.google.com/js/platform.js" async defer></script>
 	 <div id="loginModal" class="modal">
 		 <div class="modal-content">
@@ -71,26 +72,27 @@
 								<li><a id="register">Register</a></li>
 								<li><a href="basket.html">Basket</a></li>
 							</ul>
-            </div>
-          </nav>
-        </div>
 
-      <div class = "container">
-        <table>
-        <tr>
-          <th></th>
-          <th>Product name</th>
-          <th>Price</th>
-          <th>Description</th>
-        </tr>
-        <tr>
-          <td><img src="insertimage.jpg" height=100 width=100></img></td>
-          <td>BREAD</td>
-          <td>0.90</td>
-          <td>50/50 vitamin bread<td>
-        </tr>
-       </table>
-    </div>
-  </body>
+					</div>
+				</nav>
+			</div>
 
+			<div id="banner" class="container">
+				<section>
+					<div class = "searchForm">
+  					<p>Enter product name</p>
+            <select id="vendors">
+              <option value="BestBuy">BestBuy</option>
+              <option value="Tesco">Tesco</option>
+              <option value="Asda">Asda</option>
+            </select>
+  					<input type="text" id="searchField" name="search" placeholder="Search">
+  					<input type="button" id="submitButton" value="Browse">
+  					<p> </p>
+					</div>
+					<div id="results" class = "results" >
+			    </div>
+          </section>
+		  </div>
+	</body>
 </html>
