--- a/Public/basket.html
+++ b/Public/basket.html
@@ -91,7 +91,7 @@
 
         <div class="totals-item">
           <button class="checkout">Checkout</button>
-          <button class="empty">Empty</button>
+          <button class="empty" onclick="emptyBasket()">Empty</button>
         </div>
     </div>
   </body>
