--- a/Public/index.html
+++ b/Public/index.html
@@ -30,7 +30,7 @@
 
 				 <p><label for="psw"><b>Password</b></label></p>
 				 <p><input type="password" id="passwordText" placeholder="Enter Password" name="psw" required></p>
-				 <p><button type="submit" id="loginButton">Login</button></p>
+				 <p><input type="button" id="loginButton" value="Login"></p>
 				 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 			 </div>
 		 </div>
@@ -40,7 +40,7 @@
 		 <div class="modal-content">
 			 <div class="modal-header">
 				 <span id="registerClose" class="close">&times;</span>
-				 <span><h2>Login:</h2><span>
+				 <span><h2>Register:</h2><span>
 			 </div>
 			 <div class="modal-body">
 				 <p><label for="uname"><b>Username</b></label></p>
@@ -51,8 +51,7 @@
 
 				 <p><label for="psw"><b>Password</b></label></p>
 				 <p><input type="password" placeholder="Enter Password" name="psw" required></p>
-
-				 <p><button type="submit" id="registerButton">Register</button></p>
+				 <p><input type="button" id="registerButton" value="Register"></p>
 			 </div>
 		 </div>
 	 </div>
