--- a/Public/basket.html
+++ b/Public/basket.html
@@ -79,14 +79,7 @@
     <h1>Basket</h1>
 
     <div class="home">
-
-        <label class="image">Image</label>
-        <label class="details">Product</label>
-        <label class="price">Price</label>
-        <label class="quantity">Quantity</label>
-        <label class="removal">Remove</label>
-        <label class="total">Total</label>
-        <table id="basketTable">
+        <table class="container" id="basketTable">
         </table>
         <div class="totals-item">
           <button class="checkout">Checkout</button>
