Log in button fixed

--- a/Public/Offerspage.html
+++ b/Public/Offerspage.html
@@ -30,7 +30,7 @@
 
 				 <p><label for="psw"><b>Password</b></label></p>
 				 <p><input type="password" id="passwordText" placeholder="Enter Password" name="psw" required></p>
-				 <p><button type="submit" id="loginButton">Login</button></p>
+				 <p><input type="button" id="loginButton" value="Login"></p>
 				 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 			 </div>
 		 </div>
@@ -52,7 +52,7 @@
 				 <p><label for="psw"><b>Password</b></label></p>
 				 <p><input type="password" placeholder="Enter Password" name="psw" required></p>
 
-				 <p><button type="submit" id="registerButton">Register</button></p>
+				 <p><input type="button" id="registerButton" value="Register"></p>
 			 </div>
 		 </div>
 	 </div>
