--- a/Public/index.html
+++ b/Public/index.html
@@ -79,7 +79,7 @@
 			<div id="banner" class="container">
 				<section>
 					<div class = "searchForm">
-					<p>Enter product name</p>
+					<p>Enter product details</p>
 					<input type="text" id="searchField" name="search" placeholder="Search">
 					<input type="button" id="submitButton" value="Browse">
 					<p> <p>
