--- a/Public/Offerspage.html
+++ b/Public/Offerspage.html
@@ -25,8 +25,8 @@
 				 <span><h2>Login:</h2><span>
 			 </div>
 			 <div class="modal-body">
-				 <p><label for="uname"><b>Username</b></label></p>
-				 <p><input type="text" id="loginText" placeholder="Enter Username" name="uname" required></p>
+				 <p><label for="uname"><b>Email</b></label></p>
+				 <p><input type="text" id="loginText" placeholder="Enter Email" name="uname" required></p>
 
 				 <p><label for="psw"><b>Password</b></label></p>
 				 <p><input type="password" id="passwordText" placeholder="Enter Password" name="psw" required></p>
@@ -40,18 +40,17 @@
 		 <div class="modal-content">
 			 <div class="modal-header">
 				 <span id="registerClose" class="close">&times;</span>
-				 <span><h2>Login:</h2><span>
+				 <span><h2>Register:</h2><span>
 			 </div>
 			 <div class="modal-body">
 				 <p><label for="uname"><b>Username</b></label></p>
 				 <p><input type="text" placeholder="Enter Username" name="uname" required></p>
 
 				 <p><label for="email"><b>Email</b></label></p>
-				 <p><input type="text" placeholder="Enter email" name="email" required></p>
+				 <p><input type="text" id="registerEmail" placeholder="Enter email" name="email" required></p>
 
 				 <p><label for="psw"><b>Password</b></label></p>
-				 <p><input type="password" placeholder="Enter Password" name="psw" required></p>
-
+				 <p><input type="password" id="registerPassword" placeholder="Enter Password" name="psw" required></p>
 				 <p><input type="button" id="registerButton" value="Register"></p>
 			 </div>
 		 </div>
